Footer wrap for phones fix

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -20,7 +20,7 @@
 
   display: flex;
   justify-content: space-between;
-  
+    flex-wrap: wrap;
 }
 
 @media (min-width: 768px) {
@@ -38,10 +38,9 @@
 /* CONTACT INFO */
 .footer-contact-list {
   display: flex;
-  flex-direction: column;
-  gap: 1em;
   flex-direction: row;
   gap: 2em;
+  flex-wrap: wrap;
 }
 
 .footer-contact-item {
